[package]
name = "ectoken"
version = "0.4.1"
authors = ["Benoît Burnichon <bburnichon@gmail.com>", "Derek Shiell <derek.shiell@verizondigitalmedia.com>"]
edition = "2018"
description = "Token Generator for Edgecast Token-Based Authentication"
license = "Apache-2.0"
homepage = "https://github.com/EdgeCast/rust-ectoken.git"
repository = "https://github.com/EdgeCast/rust-ectoken.git"
readme = "README.md"

[dependencies]
aes-gcm = "^0.9"
rand = "^0.8"
base64 ="^0.13"
sha2 = "^0.9"
